crates/config/tests/snapshots/block_string_0_literal_strip_emptyln_eof.snap
---
source: crates/config/tests/snapshots.rs
---
# block-string-0-literal-strip-emptyln-eof

## Input

```mical
key |-


```

## JSON

```json
{
  "key": ""
}
```

vim:ft=markdown
