crates/config/tests/snapshots/block_string_0_literal_strip_none_dedent.snap
---
source: crates/config/tests/snapshots.rs
---
# block-string-0-literal-strip-none-dedent

## Input

```mical
key |-
other val

```

## JSON

```json
{
  "key": "",
  "other": "val"
}
```

vim:ft=markdown
