crates/config/tests/snapshots/block_string_1_folded_clip_emptyln_none_eof.snap
---
source: crates/config/tests/snapshots.rs
---
# block-string-1-folded-clip-emptyln-none-eof

## Input

```mical
key >

  hello

```

## JSON

```json
{
  "key": "\nhello\n"
}
```

vim:ft=markdown
