crates/config/tests/snapshots/block_string_1_folded_clip_none_emptyln_eof_nonl.snap
---
source: crates/config/tests/snapshots.rs
---
# block-string-1-folded-clip-none-emptyln-eof-nonl

## Input

```mical
key >
  hello
```

## JSON

```json
{
  "key": "hello\n"
}
```

vim:ft=markdown
